force-app/main/default/objects/Purchase_Order__c/fields/Account_Brand__c.field-meta.xml
<CustomField>
    <fullName>Account_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Brand</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Account Brand)</relationshipLabel>
    <relationshipName>Purchase_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>