force-app/main/default/objects/Purchase_Order__c/fields/Account_Brand_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Brand_Template_ID__c</fullName>
    <formula>IF(ISBLANK(Account_Brand__c) || ISBLANK(Account_Brand__r.Template_Id__c) , &apos;0T_006EAQ972514&apos;, Account_Brand__r.Template_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Brand Template ID</label>
    <type>Text</type>
</CustomField>