force-app/main/default/objects/Purchase_Order__c/fields/Additional_Notes_for_PO_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_for_PO_Email__c</fullName>
    <inlineHelpText>For additional instructions, reminders and notes that will be included in the PO email sent to suppliers</inlineHelpText>
    <label>Additional Notes (for PO Email)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>