force-app/main/default/objects/Purchase_Order__c/fields/All_Invoice_Processed__c.field-meta.xml
<CustomField>
    <fullName>All_Invoice_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Invoice Processed</label>
    <type>Checkbox</type>
</CustomField>