force-app/main/default/objects/Purchase_Order__c/fields/Cleaned_Up_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Cleaned_Up_Supplier_Name__c</fullName>
    <formula>SUBSTITUTE( Supplier__r.Name ,&quot;&apos;&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cleaned Up Supplier Name</label>
    <type>Text</type>
</CustomField>