force-app/main/default/objects/Purchase_Order__c/fields/Core_Charge__c.field-meta.xml
<CustomField>
    <fullName>Core_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Core Charge</label>
    <type>Checkbox</type>
</CustomField>