force-app/main/default/objects/Purchase_Order__c/fields/Exceeds_Maximum_Limit__c.field-meta.xml
<CustomField>
    <fullName>Exceeds_Maximum_Limit__c</fullName>
    <description>Total Price exceeds the maximum limit of $10K</description>
    <formula>IF(Total_Price__c &gt; 10000, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Price exceeds the maximum limit of $10K</inlineHelpText>
    <label>Exceeds Maximum Limit</label>
    <type>Checkbox</type>
</CustomField>