force-app/main/default/objects/Purchase_Order__c/fields/For_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>For_Approval_Notes__c</fullName>
    <label>For Approval Notes</label>
    <type>TextArea</type>
</CustomField>