force-app/main/default/objects/Purchase_Order__c/fields/In_Dispute__c.field-meta.xml
<CustomField>
    <fullName>In_Dispute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select if PO doesn&apos;t match INV and is in the dispute process, uncheck when resolved.</description>
    <inlineHelpText>Select if PO doesn&apos;t match INV and is in the dispute process, uncheck when resolved.</inlineHelpText>
    <label>In Dispute</label>
    <type>Checkbox</type>
</CustomField>