force-app/main/default/objects/Purchase_Order__c/fields/Is_PO_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_PO_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is PO approved by approver?</inlineHelpText>
    <label>Is PO Approved</label>
    <type>Checkbox</type>
</CustomField>