force-app/main/default/objects/Purchase_Order__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Details for Supplier</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>