force-app/main/default/objects/Purchase_Order__c/fields/PO_Approver__c.field-meta.xml
<CustomField>
    <fullName>PO_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approver of Purchase Order if exceeds maximum limit.</description>
    <label>PO Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>