force-app/main/default/objects/Purchase_Order__c/fields/PO_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Completion_Date__c</fullName>
    <label>Date PO Required</label>
    <type>Date</type>
</CustomField>