force-app/main/default/objects/Purchase_Order__c/fields/Quote_Reference__c.field-meta.xml
<CustomField>
    <fullName>Quote_Reference__c</fullName>
    <inlineHelpText>Separate multiple quote numbers with comma.</inlineHelpText>
    <label>Quote Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>