force-app/main/default/objects/Purchase_Order__c/fields/SDOCS_TODAYS_DATE__c.field-meta.xml
<CustomField>
    <fullName>SDOCS_TODAYS_DATE__c</fullName>
    <formula>TEXT(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDOCS TODAYS DATE</label>
    <type>Text</type>
</CustomField>