force-app/main/default/objects/Purchase_Order__c/fields/Supplier_Email_formula__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Email_formula__c</fullName>
    <formula>IF(ISBlank(Supplier_Contact__r.Email )=False, Supplier_Contact__r.Email ,  Supplier__r.Email__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Email</label>
    <type>Text</type>
</CustomField>