force-app/main/default/objects/Purchase_Order__c/fields/Supplier_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Number__c</fullName>
    <label>Supplier Invoice Number</label>
    <type>TextArea</type>
</CustomField>