force-app/main/default/objects/Purchase_Order__c/fields/Total_GST_for__c.field-meta.xml
<CustomField>
    <fullName>Total_GST_for__c</fullName>
    <formula>&apos;$&apos; &amp;
IF(
 Total_GST_rollup__c &gt;= 1000000,
TEXT(FLOOR(Total_GST_rollup__c / 1000000)) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
IF(
Total_GST_rollup__c &gt;= 1000,
RIGHT(TEXT(FLOOR(Total_GST_rollup__c / 1000)), 3) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(Total_GST_rollup__c )), 3) &amp; &quot;.&quot; &amp;
IF(
MOD(Total_GST_rollup__c , 1) * 100 &lt; 10,
&quot;0&quot; &amp; TEXT(ROUND(MOD(Total_GST_rollup__c , 1), 2) * 100),
TEXT(MIN(ROUND(MOD(Total_GST_rollup__c , 1), 2) * 100, 99))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GST</label>
    <type>Text</type>
</CustomField>