force-app/main/default/objects/Purchase_Order__c/fields/Total_Non_PR_Related_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_PR_Related_Quantity__c</fullName>
    <label>Total Non-PR Related Quantity</label>
    <summarizedField>Purchase_Order_Item__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Purchase_Order_Item__c.PO_Item_Status__c</field>
        <operation>equals</operation>
        <value>Non-PR Related</value>
    </summaryFilterItems>
    <summaryForeignKey>Purchase_Order_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>