force-app/main/default/objects/Purchase_Order__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>PO Iem Total</description>
    <inlineHelpText>Does not include NON PO Items</inlineHelpText>
    <label>Total Price</label>
    <summarizedField>Purchase_Order_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>