force-app/main/default/objects/Purchase_Order__c/fields/Total_Price_inc_GST_rollup__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_inc_GST_rollup__c</fullName>
    <label>Total Price (inc GST)</label>
    <summarizedField>Purchase_Order_Item__c.Total_Price_inc_GST_formula__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>