force-app/main/default/objects/Purchase_Order__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <label>Total Quantity</label>
    <summarizedField>Purchase_Order_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>