force-app/main/default/objects/Purchase_Order__c/fields/Total_Quantity_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_Cancelled__c</fullName>
    <label>Total Quantity Cancelled</label>
    <summarizedField>Purchase_Order_Item__c.No_of_Items_Cancelled__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>