force-app/main/default/objects/Purchase_Order__c/fields/Total_Quantity_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_Fulfilled__c</fullName>
    <label>Total Quantity Fulfilled</label>
    <summarizedField>Purchase_Order_Item__c.No_of_Items_Received__c</summarizedField>
    <summaryFilterItems>
        <field>Purchase_Order_Item__c.PO_Item_Status__c</field>
        <operation>equals</operation>
        <value>Fulfilled</value>
    </summaryFilterItems>
    <summaryForeignKey>Purchase_Order_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>