force-app/main/default/objects/Purchase_Order__c/validationRules/NotExceedsLimit_SendForApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>NotExceedsLimit_SendForApproval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISCHANGED( Status__c ) ,
   OR(ISPICKVAL(Status__c , &apos;For Approval&apos;),
      ISPICKVAL(Status__c , &apos;PO Approved&apos;)),
   Exceeds_Maximum_Limit__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>There is no need to send for approval if total price is less than maximum limit of $10K.</errorMessage>
</ValidationRule>