force-app/main/default/objects/Purchase_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supplier__c</columns>
    <columns>Total_Price__c</columns>
    <columns>PO_Date__c</columns>
    <columns>PO_Completion_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Total_Quantity_Fulfilled__c</columns>
    <columns>Quote_Reference__c</columns>
    <columns>Notes__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>