force-app/main/default/objects/Purchase_Order__c/listViews/In_Dispute.listView-meta.xml
<ListView>
    <fullName>In_Dispute</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Supplier__c</columns>
    <columns>Total_Price__c</columns>
    <columns>PO_Date__c</columns>
    <columns>Supplier_Invoice_Number__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>In_Dispute__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>In Dispute</label>
    <sharedTo>
        <group>Finance</group>
        <group>HR</group>
        <group>Purchasing</group>
    </sharedTo>
</ListView>