force-app/main/default/objects/Purchase_Order__c/listViews/PO_s_DW_Approved.listView-meta.xml
<ListView>
    <fullName>PO_s_DW_Approved</fullName>
    <columns>NAME</columns>
    <columns>Supplier__c</columns>
    <columns>Total_Price__c</columns>
    <columns>For_Approval_Notes__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PO_Approver__c</field>
        <operation>equals</operation>
        <value>David Whiley</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>PO Approved</value>
    </filters>
    <label>PO&apos;s DW Approved</label>
</ListView>