force-app/main/default/objects/Purchase_Order__c/listViews/Purchase_Order_All_Invoice_Processed.listView-meta.xml
<ListView>
    <fullName>Purchase_Order_All_Invoice_Processed</fullName>
    <columns>NAME</columns>
    <columns>Supplier__c</columns>
    <columns>PO_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Quote_Reference__c</columns>
    <columns>Supplier_Invoice_Number__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>All_Invoice_Processed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Purchase Order - All Invoice Processed</label>
    <sharedTo>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>Purchasing</group>
    </sharedTo>
</ListView>