force-app/main/default/objects/Purchase_Order__c/listViews/Purchase_Order_Draft_Beau.listView-meta.xml
<ListView>
    <fullName>Purchase_Order_Draft_Beau</fullName>
    <columns>NAME</columns>
    <columns>Supplier__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Price__c</columns>
    <columns>PO_Date__c</columns>
    <columns>Quote_Reference__c</columns>
    <columns>Notes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Beau Cramer</value>
    </filters>
    <label>Purchase Order - Draft | Beau</label>
</ListView>